--- a/K23CNT1-Nnh.Lesson7/src/main/resources/application.properties
+++ b/K23CNT1-Nnh.Lesson7/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 spring.application.name=K23CNT1-Nnh.Lesson7
-# port: 8080
 server.port=8080
-# MySQL Database
-spring.datasource.url=jdbc:mysql://localhost:3308/lesson07db
+
+# MySQL Database - S?a thành port 3306
+spring.datasource.url=jdbc:mysql://localhost:3306/lesson07db?useSSL=false&serverTimezone=Asia/Ho_Chi_Minh
 spring.datasource.username=root
 spring.datasource.password=14092005hH
+
 # Hibernate settings/JPA properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.My
-SQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
