--- a/K23CNT1-Nnh.Lesson-8/src/main/resources/application.properties
+++ b/K23CNT1-Nnh.Lesson-8/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Keep entity table and column names as-is (no snake_case conversion)
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# C?u hình static resources cho c? authors và books
+spring.web.resources.static-locations=classpath:/static/,file:///C:/Project 3/
+spring.mvc.static-path-pattern=/**
