sửa lỗi trang chủ

--- a/K23CNT1-Project-3/.gitignore
+++ b/K23CNT1-Project-3/.gitignore
@@ -62,6 +62,7 @@ Desktop.ini
 application-local.properties
 application-dev.properties
 application-prod.properties
+run.bat
 
 # Temporary files
 *.tmp
