--- a/K23CNT1-Project-3/pom.xml
+++ b/K23CNT1-Project-3/pom.xml
@@ -95,6 +95,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Dotenv for loading .env file -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
